--- a/src/components/FAQ/FAQ.css
+++ b/src/components/FAQ/FAQ.css
@@ -39,6 +39,41 @@
   font-size: 1rem;
 }
 
+
+/* Modo escuro */
+body.modo-escuro .container-faq{
+  color: #e0e0e0;
+}
+
+body.modo-escuro .pergunta button p{
+  color: #e0e0e0;
+}
+
+
+body.modo-escuro .resposta p {
+  color: #e0e0e0;
+}
+
+/* Responsividade */
+@media (max-width: 1023px) {
+  .container-texto-direita {
+    flex-direction: column-reverse;
+  }
+
+  .imagem-esquerda {
+    width: 100%;
+  }
+
+  .texto-direita {
+    text-align: center;
+  }
+
+ 
+
+
+
+
+
 /* --- Responsividade --- */
 @media (max-width: 768px) {
   .container-faq {
