--- a/src/components/FAQ/FAQ.css
+++ b/src/components/FAQ/FAQ.css
@@ -15,9 +15,9 @@
 /* --- Pergunta --- */
 .pergunta button {
   width: 100%;
-  background-color: #adbae4;
+  background-color: #134470;
   border: none;
-  color: #000000;
+  color: #f5f0db;
   font-size: 1.2rem;
   text-align: left;
   padding: 1rem;
