--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 /* Modo Claro */
 footer {
-  background-color: #b25640;
+  background-color: #134470;
   color: #f8f7f0;
   padding: 2rem;
   display: flex;
