--- a/src/components/TextoDireita/TextoDireita.css
+++ b/src/components/TextoDireita/TextoDireita.css
@@ -33,10 +33,12 @@
   color: #333;
 }
 
+
 .texto-direita h2 {
   font-size: 1.8rem;
   margin-bottom: 0.5rem;
   font-weight: 700;
+  color: #134470;
 }
 
 .texto-direita p {
