--- a/src/components/FAQ/FAQ.css
+++ b/src/components/FAQ/FAQ.css
@@ -5,7 +5,7 @@
   padding: 1.5rem;
   border-radius: 10px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  background-color: #f8f4e6;
+  background-color: #eae8de;
   transition: background-color 0.3s ease;
   display: flex;
   flex-direction: column;
@@ -17,7 +17,7 @@
   width: 100%;
   background-color: #134470;
   border: none;
-  color: #f8f4e6;
+  color: #eae8de;
   font-size: 1.2rem;
   text-align: left;
   padding: 1rem;
